# embedding_deployment

./: .env.example  .gitignore  README.md  REAMDME.md  deploy.py  pyproject.toml
.githooks/: pre-commit
bash/: download_models_locally.sh  precommit_formatting.sh  run_end_to_end_tests.sh
benchmark/: .env.example  benchmark.md  benchmark.py  config.json.example
benchmark/src/: embeddings.py  extraction.py  measure.py  settings.py
benchmark/src_bench/: config.py  consts.py  embeddings.py  main.py  providers.py
benchmark/src_bench/domain/: enums.py  models.py  ports.py  services.py  types.py
benchmark/src_bench/domain/services/: benchmarking.py  data.py  extraction.py  general.py  measure.py
benchmark/src_bench/infrastructure/: adapters.py  containers.py
benchmark/tests/end_to_end/: run_benchmark_test.py
benchmark/tests/unit/: adapters_test.py  bench_framework_test.py  conftest.py  conifg_test.py  get_data_test.py  test_adapters.py  test_bench_framework.py  test_config.py  test_get_data.py
building/llama_cpp/: model_download.py
building/ollama/: Containerfile
building/onnx/: Containerfile  model_download.py  onnx_build.py  pyproject.toml
building/sentence-transformers/: Containerfile  pyproject.toml  sentence_transformers_build.py
building/sentence_transformers/: Containerfile  model_download.py  sentence_transformers_build.py
deployment/: deploy.py
deployment/src/: settings.py
deployment/src/domain/: enums.py  protocols.py
deployment/src/infrastructure/: image_builders.py
docs/: benchmark.md
docs/benchmark/: ollama.md  onnx.md  results.md  sentence_transformers.md
ollama_deployment/: Containerfile
onnx_deployment/: Containerfile  onnx_build.py  pyproject.toml
onnx_deployment/src/: main.py  models.py  services.py
src/: main.py  settings.py
src/domain/: protocols.py  quantization.py  types.py
src/framework/: dependencies.py  models.py
src/infrastructure/: adapters.py  enums.py  exceptions.py  image_builders.py  utils.py
src/infrastructure/adapters/: llama_cpp_encoding.py  onnx_encoding.py  sentence_transformers_encoding.py
src/infrastructure/utils/: paths.py
src/share/: consts.py
src/share/settings/: app.py  environment.py  onnx.py  quantization.py
test/: conftest.py  consts.py  ollama_test.py  onnx_test.py  podman_note.md  sentence-transformers_test.py  test.py
test/end_to_end/: ollama_test.py  onnx_test.py  sentence_transformers_test.py
test/unit/: onnx_test.py  sentence_transformer.py  sentence_transformer_test.py
tests/: conftest.py
tests/data/: reference_result.pickle
tests/end_to_end/: onnx_test.py  sentence_transformers_test.py  test_ollama.py  test_onnx.py  test_sentence_transformers.py
tests/integration/: test_llama_cpp.py  test_onnx.py
tests/unit/: onnx_test.py  sentence_transformer_test.py
