[project]
name = "embedding_deployment"
version = "0.6.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.127.*",
    "onnx==1.20.*",
    "onnxruntime==1.23.*",
    "pdfminer-six==20251107",
    "pydantic-settings==2.12.*",
    "pypdf==6.5.*",
    "requests==2.32.*",
    "sentence-transformers==5.2.*",
    "transformers==4.57.*",
    "uvicorn==0.40.*",
]

[dependency-groups]
dev = [
    "black==25.12.*",
    "isort==7.0.*",
]
test = [
    "httpx>=0.28.1",
    "pytest==9.0.*",
    "testcontainers>=4.13.3",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:^The @wait_container_is_ready decorator:DeprecationWarning"
]
