[project]
name = "embedding_deployment"
version = "0.7.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.128.*",
    "onnx==1.20.*",
    "onnxruntime==1.23.*",
    "pydantic-settings==2.12.*",
    "uvicorn==0.40.*",
]

[dependency-groups]
benchmark = [
    "httpx==0.28.*",
    "pdfminer-six==20251228",
    "pypdf==6.5.*",
]
dev = [
    "black==25.12.*",
    "isort==7.0.*",
]
onnx-build = [
    "onnx==1.20.*",
    "transformers==4.57.*",
]
onnx-runtime = [
    "onnxruntime==1.23.*",
    "tokenizers==0.22.*",
]
sentence-transformers = [
    "sentence-transformers==5.2.*",
]

test = [
    "httpx==0.28.*",
    "pytest==9.0.*",
    "testcontainers==4.13.*",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:^The @wait_container_is_ready decorator:DeprecationWarning"
]
