[project]
name = "embedding_deployment"
version = "0.23.0"
description = "Benchmark for various options of deploying embedding models."
requires-python = "==3.13.*"
dependencies = [
    "dishka==1.7.*",
    "fastapi==0.128.*",
    "pydantic-settings==2.12.*",
    "uvicorn==0.40.*",
]

[dependency-groups]
benchmark = [
    "httpx==0.28.*",
    "pdfminer-six==20260107",
    "pypdf==6.6.*",
]
dev = [
    "ruff==0.14.*",
]
llama-cpp = [
    "llama-cpp-python==0.3.*",
]
onnx-build = [
    "onnx==1.20.*",
    "onnxruntime==1.23.*",
    "transformers==5.0.*",
]
onnx-runtime = [
    "onnxruntime==1.23.*",
    "tokenizers==0.22.*",
]
sentence_transformers = [
    "sentence-transformers==5.2.*"
]

test = [
    "httpx==0.28.*",
    "pytest==9.0.*",
    "testcontainers==4.14.*",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:^The @wait_container_is_ready decorator:DeprecationWarning",
    "ignore:^Importing from torchao.dtypes:DeprecationWarning",
    "ignore:^Importing BlockSparseLayout from torchao.dtypes:DeprecationWarning"
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["I", "E", "F", "B"]

[tool.ruff.lint.isort]
known-first-party = ["src", "src_bench"]
