[project]
name = "gemma-ollama"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.124.*",
    "onnxruntime>=1.23.*",
    "uvicorn==0.38.*",
    "tokenizers==0.22.*"
]

[dependency-groups]
onnx-build = [
    "onnx==1.20.*",
    "transformers==4.57.*"
]
